<resources>
    <string name="app_name">WeatherApp</string>
    <string name="api_default_error">Something happened, please try again</string>


    <!-- Dashboard -->
    <string name="select_region_and_country">Select Region and Country </string>
    <string name="select_region">Select Region</string>
    <string name="select_country">Select country</string>
    <string name="select_area">Select Area</string>
    <string name="btn_show_temp">Get Temperature</string>
    <string name="title_activity_location_select">LocationSelect</string>
    <string name="no_temp_found">No Temperature available now</string>
    <string name="hourly_forcast">Hourly Forecast</string>

    <!-- Validation -->
    <string name="alert_select_region">Please Select Region</string>
    <string name="alert_select_country">Please Select country</string>
    <string name="alert_select_area">Please Select Area</string>
</resources>
